@@ -33,10 +33,10 @@ VFN=valueForName
 currentTime=time.time
 __CHEETAH_version__ = '2.0.1'
 __CHEETAH_versionTuple__ = (2, 0, 1, 'final', 0)
-__CHEETAH_genTime__ = 1208557454.7957201
-__CHEETAH_genTimestamp__ = 'Fri Apr 18 18:24:14 2008'
+__CHEETAH_genTime__ = 1209057202.737108
+__CHEETAH_genTimestamp__ = 'Thu Apr 24 13:13:22 2008'
 __CHEETAH_src__ = 'webui_templates/master.tmpl'
-__CHEETAH_srcLastModified__ = 'Fri Feb 15 14:47:43 2008'
+__CHEETAH_srcLastModified__ = 'Thu Apr 24 12:59:37 2008'
 __CHEETAH_docstring__ = 'Autogenerated by CHEETAH: The Python-Powered Template Engine'
 
 if __CHEETAH_versionTuple__ < RequiredCheetahVersionTuple:
@@ -69,7 +69,7 @@ class master(Template):
 
 
 
-        ## CHEETAH: generated from #block body at line 53, col 1.
+        ## CHEETAH: generated from #block body at line 54, col 1.
         trans = KWS.get("trans")
         if (not trans and not self._CHEETAH__isBuffering and not callable(self.transaction)):
             trans = self.transaction # is None unless self.awake() was called
@@ -196,11 +196,15 @@ class master(Template):
         <li><a href="''')
         _v = VFFSL(SL,"base_url",True) # '$base_url' on line 46, col 22
         if _v is not None: write(_filter(_v, rawExpr='$base_url')) # from line 46, col 22.
+        write('''?mode=ksfile_new" class="menu">Kickstart</a></li>
+        <li><a href="''')
+        _v = VFFSL(SL,"base_url",True) # '$base_url' on line 47, col 22
+        if _v is not None: write(_filter(_v, rawExpr='$base_url')) # from line 47, col 22.
         write('''?mode=repo_edit" class="menu">Repo</a></li>
         <li><hr/><br/></li>
         <li><a class="button sync" href="''')
-        _v = VFFSL(SL,"base_url",True) # '$base_url' on line 48, col 42
-        if _v is not None: write(_filter(_v, rawExpr='$base_url')) # from line 48, col 42.
+        _v = VFFSL(SL,"base_url",True) # '$base_url' on line 49, col 42
+        if _v is not None: write(_filter(_v, rawExpr='$base_url')) # from line 49, col 42.
         write('''?mode=sync">Sync</a></li>
     </ul>
 </div>
