@@ -1,0 +1,48 @@
+#extends cobbler.webui.master
+
+#block body
+
+#if $editable != True
+<blockquote>
+NOTE: You do not have permission to create new kickstart templates.
+</blockquote>
+</br>
+#end if
+
+<form method="post" action="$base_url?mode=ksfile_save">
+    <fieldset id="cform">
+        <legend>Create New Kickstart Template</legend>
+
+        <input type="hidden" name="isnew" value="1"/>
+
+    <table>
+    <tr>
+    <td>
+    <label for="name">Filename</label>
+    </td>
+    <td>
+    <input type="text" size="128" style="width: 150px;" name="name" id="name"
+    <p class="context-tip">Example:  foo.ks (to be saved in /var/lib/cobbler/kickstarts/)</p>
+    </td>
+    </tr>
+
+
+    <tr><td colspan="2">
+
+        <pre><textarea rows="40" cols="120" name="ksdata" id="ksdata">$ksdata</textarea></pre>
+        <br/>
+
+    </td></tr>
+
+    <tr><td colspan="2">
+        #if $editable == True
+            <input type="submit" name="submit" value="Save"/>
+            <input type="reset" name="reset" value="Reset"/>
+        #end if
+    </td></tr>
+    </table>
+
+    </fieldset>
+</form>
+
+#end block body
