@@ -43,6 +43,7 @@
         <li><a href="$base_url?mode=profile_edit" class="menu">Profile</a></li>
         <li><a href="$base_url?mode=subprofile_edit" class="menu">Subprofile</a></li>
         <li><a href="$base_url?mode=system_edit" class="menu">System</a></li>
+        <li><a href="$base_url?mode=ksfile_new" class="menu">Kickstart</a></li>
         <li><a href="$base_url?mode=repo_edit" class="menu">Repo</a></li>
         <li><hr/><br/></li>
         <li><a class="button sync" href="$base_url?mode=sync">Sync</a></li>
